angular material problems

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Dates</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <title>Family Vacation App</title>
 </head>
-<body>
+
+  <mat-toolbar color="primary">
+    <span>Family Vacation App</span>
+    <span class="example-spacer"></span>
+    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item>
+        <a mat-raised-button routerLink="dates">New Vacation</a>
+      </button>
+      <button mat-menu-item>
+        <a mat-raised-button routerLink="planner">Plan</a>
+      </button>
+    </mat-menu>
+  </mat-toolbar>
+  <body>
   <app-root></app-root>
 </body>
 </html>
